src/test/deca/test_compilateur/syntax/invalid/created/miscellaneous/cast_missing_2nd_par.deca
// Description :
//    cast manque de la deuxième paire de parenthese
//
// Resultats :
//		Syntaxe error

{
a = (a)a;
}